--- a/webapp/src/ChinookSolution/WebApp/Pages/SamplePages/Basics.cshtml
+++ b/webapp/src/ChinookSolution/WebApp/Pages/SamplePages/Basics.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id?}"
 @model WebApp.Pages.SamplePages.BasicsModel
 @{
 	// The cshtml page contains both cs code and html code
@@ -10,6 +10,8 @@
 }
 <h1>Basics of Razor Page</h1>
 
+@*OnGet*@
+<h3>Demonstration of OnGet() request processing</h3>
 @if (string.IsNullOrWhiteSpace(Model.MyName))
 {
 	<p>The random number is odd.</p>
@@ -18,3 +20,17 @@ else
 {
 	<p>@Model.MyName</p>
 } @* eof *@
+
+@*OnPost*@
+<h3>Demostration of OnPost request processing for a form</h3>
+<form method="post">
+	<label>
+		Enter a number
+		<input type="number" asp-for="id" /><br />
+	</label>
+	<button type="submit" value="A" id="theButton" name="theButton">A Button</button>
+	&nbsp;&nbsp;
+	<button type="submit" value="B" id="theButton" name="theButton">B Button</button>
+</form>
+<br />
+<p style="color: forestgreen; font-weight: bold;">@Model.FeedBack</p>
