--- a/webapp/src/ChinookSolution/WebApp/Pages/Shared/_Layout.cshtml
+++ b/webapp/src/ChinookSolution/WebApp/Pages/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 
     <footer>
         <div>
-            &copy; 2022 - WebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; Jan 2022 - Chinook WebApp - NAIT DMIT2018 Learning Sample (All Rights Reserved) - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
