--- a/webapp/src/ChinookSolution/WebApp/Pages/SamplePages/Controls.cshtml
+++ b/webapp/src/ChinookSolution/WebApp/Pages/SamplePages/Controls.cshtml
@@ -90,6 +90,34 @@
 		<div class="onethird">
 		<h3>List and Slider</h3>
 		<form method="post">
+			<label>
+				Select your favourite Ride
+				<select asp-for="MyRide">
+					<option value="0">Select ride...</option>
+					@foreach(var ride in Model.Rides)
+					{
+						<option value="@ride.ValueId">@ride.DisplayText</option>
+					}
+				</select>
+			</label>
+			<br />
+			<label>
+				Select your favourite Vacation Spot
+				<input type="text" asp-for="VacationSpot"
+					list="VacationChoices" />
+				<datalist id="VacationChoices">
+					@foreach(var spot in Model.VacationSpots)
+					{
+						<option value="@spot" />
+					}
+				</datalist>
+			</label>
+			<br />
+			<label>
+				Rate the form control review (bad <-> good)
+				<input type="range" min="0" max="10" step="1" value="5" asp-for="ReviewRating" />
+			</label>
+			<br />
 			<button type="submit" value="listslider" id="theListSliderButton" 
 			name="theListSliderButton" asp-page-handler="ListSlider">
 				List/Slider Submit
