--- a/webapp/src/ChinookSolution/WebApp/Pages/Shared/_MyCustomCSS.cshtml
+++ b/webapp/src/ChinookSolution/WebApp/Pages/Shared/_MyCustomCSS.cshtml
@@ -9,7 +9,11 @@
 
 	.onethird {
 		width: calc(100% / 3);
-		/*text-align: center;*/
+		margin-right: 2rem;
+	}
+
+	.onehalf {
+		width: 50%;
 		margin-right: 2rem;
 	}
 </style>
