--- a/webapp/src/ChinookSolution/WebApp/Pages/SamplePages/Basics.cshtml
+++ b/webapp/src/ChinookSolution/WebApp/Pages/SamplePages/Basics.cshtml
@@ -1,36 +1,39 @@
 ﻿@page "{id?}"
 @model WebApp.Pages.SamplePages.BasicsModel
 @{
-	// The cshtml page contains both cs code and html code
-	// The @ symbol takes processing from the html environment and moves it to the C# environment
-	// Processing any html moves processing into the html environment
+    //the cshtml page contains both cs code and html code
+    //the @ symbol takes processing from the html environment
+    //  and moves it to the C# environment
+    //processing any html code moves processig into the html
+    //  environment
 
-	// Set the text for the browser window tab
-	ViewData["Title"] = "Review Page Basics";
+    //set the text for the brower window tab
+    ViewData["Title"]="Review page basics";
 }
-<h1>Basics of Razor Page</h1>
+<h1>Basics of Razor Page (Review)</h1>
 
-@*OnGet*@
-<h3>Demonstration of OnGet() request processing</h3>
+<h3>Demonstraton of OnGet() request processing</h3>
+
 @if (string.IsNullOrWhiteSpace(Model.MyName))
 {
-	<p>The random number is odd.</p>
+    <p>The random number is odd.</p>
 }
 else
 {
-	<p>@Model.MyName</p>
-} @* eof *@
+    <p>@Model.MyName</p>
+}<!--eof-->
 
-@*OnPost*@
-<h3>Demostration of OnPost request processing for a form</h3>
+<h3>Demonstration of OnPost request processing for a form</h3>
+
 <form method="post">
-	<label>
-		Enter a number
-		<input type="number" asp-for="id" /><br />
-	</label>
-	<button type="submit" value="A" id="theButton" name="theButton">A Button</button>
-	&nbsp;&nbsp;
-	<button type="submit" value="B" id="theButton" name="theButton">B Button</button>
+    <label>
+        Enter a number
+        <input type="number" asp-for="id" /><br/>
+    </label>
+    <button type="submit" value="A" id="theButton" name="theButton">A Button</button>
+    &nbsp;&nbsp;
+    <button type="submit" value="B" id="theButton" name="theButton">B Button</button>
+
 </form>
-<br />
-<p style="color: forestgreen; font-weight: bold;">@Model.FeedBack</p>
+<br/>
+<p style="color:forestgreen; font-weight:bold;">@Model.FeedBack</p>
